<resources>
    <string name="app_name">YouTube Downloader</string>
    <string name="paste_youtube_video_url">Paste YouTube Video URL</string>
    <string name="download">Download</string>
    <string name="created_by">Developer: <a href="https://www.vishnusivadas.com">Vishnu Sivadas</a></string>
    <string name="see_downloaded_videos">Downloads</string>
    <string name="contact_us"><a href="mailto:mail@codeseasy.com">Contact Us</a></string>
    <string name="developer_vishnu_update">Developer: <a href="https://www.vishnusivadas.com">Vishnu Sivadas</a></string>
    <string name="day_light">Day Light</string>
    <string name="night_mode">Night Mode</string>
    <string name="upgrade_to_pro"><u>Upgrade to Pro</u></string>
    <string name="sign_out">Sign out</string>
    <string name="download_mp3">Download MP3</string>
</resources>
